<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/photo9"
        android:orientation="vertical"
        tools:ignore="ExtraText">
        tools:context=".LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="40sp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/loginemail"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/lavender_border"
                    android:drawableLeft="@drawable/baseline_email_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/Email"
                    android:padding="18dp"
                    android:textColor="@color/grey"
                    android:layout_gravity="center"
                    android:textSize="20sp"/>

                <EditText
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:id="@+id/loginpassword"
                    android:layout_gravity="center"
                    android:background="@drawable/lavender_border"
                    android:padding="18dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:layout_marginTop="35dp"/>

                <Button
                    android:id="@+id/loginbutton"
                    android:layout_width="250dp"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_height="60dp"
                    android:layout_marginTop="45dp"
                    android:background="@color/lavender"
                    android:text="Login"
                    android:textSize="25sp"
                    android:paddingTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signupRedirectText"
                    android:text="@string/not_yet_registered_signup"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
